dark mode fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -278,9 +278,17 @@ label {
   }
 
   .p-paginator .p-paginator-pages .p-paginator-page.p-highlight,
-  .p-paginator .p-paginator-pages .p-paginator-page:not(.p-highlight):hover {
+  .p-paginator .p-paginator-pages .p-paginator-page:not(.p-highlight):hover,
+  .p-paginator .p-paginator-first:not(.p-disabled):not(.p-highlight):hover, 
+  .p-paginator .p-paginator-prev:not(.p-disabled):not(.p-highlight):hover, 
+  .p-paginator .p-paginator-next:not(.p-disabled):not(.p-highlight):hover, 
+  .p-paginator .p-paginator-last:not(.p-disabled):not(.p-highlight):hover {
     background: $gray-800;
     border-color: $gray-800;
     color: $gray-200;
   }
+  .p-button.p-button-text.p-button-plain:enabled:hover {
+    background: $gray-800;
+    color: $gray-200;
+}
 }
